[Australis] Bug 916953: introduce separator in overflow panel

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -1855,6 +1855,38 @@ richlistitem[type~="action"][actiontype="searchengine"][selected="true"] > .ac-t
   list-style-image: url("chrome://browser/skin/places/editBookmark.png");
 }
 
+/* bookmarks menu-button */
+
+#bookmarks-menu-button.bookmark-item {
+  list-style-image: url("chrome://browser/skin/places/bookmark.png");
+  -moz-image-region: rect(0px 16px 16px 0px);
+}
+
+#bookmarks-menu-button.bookmark-item[starred] {
+  -moz-image-region: rect(0px 48px 16px 32px);
+}
+
+#bookmarks-menu-button.bookmark-item > .toolbarbutton-menubutton-button > .toolbarbutton-icon {
+  -moz-margin-start: 5px;
+}
+
+#bookmarks-menu-button[cui-areatype="toolbar"]:not(.bookmark-item):not(.overflowedItem) > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+#BMB_bookmarksPopup[side="top"],
+#BMB_bookmarksPopup[side="bottom"] {
+  margin-left: -20px;
+  margin-right: -20px;
+}
+
+#BMB_bookmarksPopup[side="left"],
+#BMB_bookmarksPopup[side="right"] {
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+
 /* bookmarking panel */
 
 #editBookmarkPanelStarIcon {
